# PersonaRAG

./: .gitignore  .gitmodules  NEXT_STEPS.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
backend/: CHAT_AI_README.md  COMPLETION_REPORT.md  DEVICE_FIX_GUIDE.md  Dockerfile.production  FIX_COMPLETE.md  LLM_README.md  TTS_README.md  fix_conversations.py  install_triton.py  pyproject.toml  quick_test_fixed.py  requirements_tts.txt  simple_chat_test.py  simple_test.py  start_server.py
backend/F5-TTS-Vietnamese-100h/: requirements.txt
backend/app/: main.py  main_optimized.py
backend/app/api/v1/: characters.py  chat.py  chat_ai.py  rag.py  tts_optimized.py  voice.py
backend/app/core/: advanced_prompt_builder.py  ai_models.py  audio_manager.py  character_chat_service.py  enhanced_config.py  llm_chat.py  llm_config.py  prompt_builder.py  rag_agent.py  tts_config.py  tts_service.py  tts_service_singleton.py  voice_processor.py
backend/app/models/: characters.py
backend/app/services/cloneVoice/: __init__.py  api.py  wrapper.py
backend/app/services/cloneVoice/infer/: utils_infer.py
backend/app/services/cloneVoice/model/: trainer.py
backend/app/services/cloneVoice/model/backbones/: dit.py
backend/app/utils/: logger.py
backend/configs/: requirements_rag.txt
backend/data/training/gia_cat_luong/: conversations.json  personality.json
backend/data/training/tu_ma_y/: conversations.json  personality.json
backend/data/voices/: README.md
backend/data/voices/gia_cat_luong/: metadata.json
backend/data/voices/tu_ma_y/: metadata.json
backend/models/voice_profiles/: gia_cat_luong_profile.json
backend/scripts/: Dockerfile.training  configure_voice_settings.py  demo_rag_chat.py  generate_metadata.py  run_training.sh  setup_environment.bat  setup_environment.sh  setup_llm.bat  setup_rag_system.py
docs/: CHANGELOG.md  DEPLOYMENT.md  IMPROVEMENT_SUMMARY.md  ORGANIZATION_COMPLETE.md  README.md  final_summary_endpoints.md
docs/development/: CLEANUP_SUMMARY.md  ENHANCEMENT_SUMMARY.md  ERROR_ANALYSIS_AND_FIX.md  RAG_INTEGRATION_COMPLETE.md  chat_endpoint_analysis.py  endpoint_analysis.py  flow_analysis.py  testing.md
docs/guides/: CHAT_GUIDE.md  RAG_README.md
docs/setup/: local-deployment.md  quick-start.md
docs/voice/: voice-settings.md
frontend/src/: App.css  App.jsx  App_fixed.jsx
frontend/src/components/chat/: PersonaChat.css  PersonaChat.jsx  VoiceSynthesizer.jsx
frontend/src/components/debug/: ApiTest.jsx
frontend/src/services/: api.js  chatService.js  voiceService.js
nginx/: nginx.conf
scripts/: cleanup.sh
scripts/deployment/: README.md
scripts/development/: README.md  demo_enhanced_character.py  fix_addressing_issue.py
scripts/setup/: check_dependencies.py
scripts/testing/: README.md  quick_rag_test.py  quick_setup.py  quick_test.py  quick_test_character.py
scripts/training/: docker-compose.training.yml  fine_tune.py
scripts/voice/: configure_voice_settings.py  process_voices.py
