# backend/pyproject.toml

[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false
description = "Backend for PersonaRAG project"
authors = ["thhieu2904 <thhieu2904@gmail.com>"]

# NGUỒN MỚI CHO PYTORCH
[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.11"

# Web
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
python-multipart = "*"
aiohttp = "*"
aiofiles = "*"

# --- F5-TTS and Audio dependencies ---
# Mô hình AI & Xử lý âm thanh
transformers = ">=4.0.0"
vinorm = "*"
cached_path = "*"
huggingface_hub = "*"
accelerate = ">=0.33.0"
vocos = "*"
x_transformers = ">=1.31.14"
librosa = "*"
soundfile = "*"
pydub = "*"

# Text processing và Audio processing bổ sung
jieba = "*"
pypinyin = "*"
zhconv = "*"
zhon = "*"

# Thư viện khoa học dữ liệu
numpy = "*"
pandas = "^1.5.3"
scipy = "*"
torchdiffeq = "*"
ema_pytorch = ">=0.5.2"
# THÊM 2 DÒNG NÀY VÀO
numba = ">=0.60.0"      # Yêu cầu numba phiên bản mới
llvmlite = ">=0.43.0"   # Yêu cầu llvmlite phiên bản mới

# Torch, Torchaudio & Torchvision (PHIÊN BẢN ĐÃ CẬP NHẬT)
torch = { version = "2.3.1+cu121", source = "pytorch-cu121" }
torchaudio = { version = "2.3.1+cu121", source = "pytorch-cu121" }
torchvision = { version = "0.18.1+cu121", source = "pytorch-cu121" }

wandb = "^0.21.0"
datasets = "^2.20.0"

# --- Additional TTS dependencies ---
# Quantization & Optimization
bitsandbytes = ">0.37.0"

# UI & Interaction
gradio = ">=3.45.2"
click = "*"

# --- GGUF Model Support ---
# Llama.cpp Python bindings cho GGUF models

# Configuration & Validation
pydantic = "*"
pydantic-settings = "*"

# Configuration & Utilities
hydra-core = ">=1.3.0"
tomli = "*"
tqdm = ">=4.65.0"

# Model & Data handling
safetensors = "*"
transformers-stream-generator = "*"
faster-whisper = "==0.10.1"

# Visualization
matplotlib = "*"

# --- F5-TTS specific dependencies ---
# Audio processing
pyaudio = "*"

# Optional evaluation dependencies
funasr = "*"
jiwer = "*"
modelscope = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"